Bug 598027 - Thunderbird sends two read receipts every time, if "Return receipts : Always send" is set; r=Standard8