mailnews/extensions/mdn/src/nsMsgMdnGenerator.cpp
@@ -1041,8 +1041,7 @@ nsresult nsMsgMdnGenerator::InitAndProcess(PRBool *needToAskUser)
             else
             {
                 *needToAskUser = PR_FALSE;
-                rv = CreateMdnMsg();
-                UserAgreed();
+                rv = UserAgreed();
             }
         }
     }
